--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,14 @@ db/structure.sql
 .sass-cache
 Cookbooks
 .vagrant
+.idea/.generators
+.idea/.rakeTasks
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/encodings.xml
+.idea/fueno.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/scopes/scope_settings.xml
+.idea/vcs.xml
+.idea/workspace.xml
